写入数据库中的数据

--- a/src/html/goods.html
+++ b/src/html/goods.html
@@ -3,8 +3,76 @@
 <head>
     <meta charset="UTF-8" />
     <title>商品详情</title>
+    <link rel="stylesheet" type="text/css" href="../css/base.css" />
+    <link rel="stylesheet" type="text/css" href="../css/goods.css" />
+    <link rel="stylesheet" type="text/css" href="../lib/jquery.gdsZoom/jquery.gdsZoom.css" />
+    <script src="../lib/jquery-3.2.1.js" type="text/javascript"></script>
+    <script src="../lib/jquery.gdsZoom/jquery.gdsZoom.js" type="text/javascript"></script>
+    <script src="../js/common.js" type="text/javascript"></script>
+    <script src="../js/goods.js"></script>
 </head>
 <body>
-    
+    <div id="datalist">
+        <header id="goodsHeader"></header>
+        <div class="xiangq">
+            <div class="container">
+                <ul class="fenlei1 clearfix">
+                    <li>
+                        狗狗 22244 
+                        <i></i>
+                        <ul class="fenlei2">
+                            <li><a href="#">狗狗</a> 22244</li>
+                            <li><a href="#">猫猫</a> 10680</li>
+                        </ul>
+                    </li>  
+                    <li>
+                        狗狗零食 2399 
+                        <i></i>
+                        <ul class="fenlei2">
+                            <li><a href="#">狗狗主粮</a> 22244</li>
+                            <li><a href="#">狗狗零食</a> 10680</li>
+                            <li><a href="#">狗狗服饰</a> 22244</li>
+                            <li><a href="#">狗狗窝垫</a> 10680</li>
+                            <li><a href="#">狗狗生活</a> 22244</li>
+                            <li><a href="#">狗狗玩具</a> 10680</li>
+                            <li><a href="#">狗狗医疗</a> 22244</li>
+                            <li><a href="#">狗狗保健</a> 10680</li>
+                            <li><a href="#">狗狗牵引</a> 22244</li>
+                            <li><a href="#">狗狗美容</a> 10680</li>
+                            <li><a href="#">狗狗周边</a> 22244</li>
+                            <li><a href="#">狗狗新品</a> 10680</li>
+                            <li><a href="#">狗狗清洁</a> 22244</li>
+                        </ul>
+                    </li>  
+                    <li>
+                        狗狗磨牙洁齿 757 
+                        <i></i>
+                        <ul class="fenlei2">
+                            <li><a href="#">磨牙洁齿</a> 757</li>
+                            <li><a href="#">肉制零食</a> 779</li>
+                            <li><a href="#">点心饮料</a> 230</li>
+                            <li><a href="#">罐头湿粮</a> 244</li>
+                            <li><a href="#">磨牙饼干</a> 680</li>
+                            <li><a href="#">冻干零食</a> 255</li>
+                        </ul>
+                    </li>  
+                    <li>商品详情</li>
+                </ul>
+            </div>
+        </div>
+        <div class="gmd">
+            <div class="container clearfix">
+                <!-- 左侧商品图片 -->
+                <div class="gmd_l fl">
+                    
+                </div>
+                <!-- 右侧内容 -->
+                <div class="gmd_r fr">
+                    <img src="../images/xqneirong.png" height="640" width="710" alt="" />
+                </div>
+            </div>
+        </div>
+        <footer id="goodsFooter"></footer>
+    </div>
 </body>
 </html>
