--- a/src/html/header.html
+++ b/src/html/header.html
@@ -166,8 +166,15 @@
 <div id="nav">
     <div class="container clearfix">
         <ul class="nav_l fl clearfix">
-            <li><a href="#">狗狗</a><i></i></li>
             <li>
+                <a href="#">狗狗</a><i></i>
+                <ul class="gg">
+                    <li><img src="../images/gg.png" height="118" width="228" alt="" /></li>
+                    <li><img src="../images/mm.png" height="118" width="228" alt="" /></li>
+                    <li><img src="../images/hh.png" height="118" width="228" alt="" /></li>
+                </ul>
+            </li>
+            <li class="sp">
                 <a href="#">商品分类</a>
                 <i class="fenlei0"></i>
                 <div class="category">
