--- a/src/html/login.html
+++ b/src/html/login.html
@@ -45,7 +45,7 @@
         </div>
         <div class="log">
             <div class="container">
-                <form action="#">
+                <form>
                     <div class="logdiv fr">
                         <div class="logdiv_t">
                             <span>普通登陆</span><span>手机动态密码登录</span>
