--- a/src/html/reg.html
+++ b/src/html/reg.html
@@ -24,11 +24,11 @@
                             $('#username').addClass('danger');
                         }
                     }
-                })
-                
+                }) 
             })
         });
     </script> 
+    <!-- <script src="../js/reg.js" type="text/javascript"></script> -->
 </head>
 <body>
     <div id="reg">
@@ -54,15 +54,15 @@
                             <label for="yzm">验证码：</label>
                             <input type="text" name="yzm" id="yzm"  placeholder="请输入右侧内容" />
                             <a href="#" class="tucontent fr clearfix">
-                                <span class="yzcode">code</span>
-                                <span class="hyh"><i></i>&ensp;换一换</span>
+                                <span class="yzcode"></span>
+                                <!-- <span class="hyh"><i></i>&ensp;换一换</span> -->
                             </a>
                         </div>
                         <div class="dxyzm">
                             <label for="dxyzm">短信验证码：</label>
                             <input type="text" name="dxyzm" id="dxyzm"  placeholder="验证码" />
                             <a href="#" id="phonecode" name="phonecode">
-                                <span> 获取验证码 </span>
+                                <span class="huoqu"> 获取验证码 </span>
                             </a>
                         </div>
                         <div class="username" >
@@ -71,20 +71,20 @@
                         </div>
                         <div class="mima" >
                             <label for="password"> 密码：</label>
-                            <input type="password" class="logpass" name="password" id="password" maxlength="20" placeholder="密码（8-20位，区分大小写）" />
+                            <input type="password" name="password" id="password" maxlength="20" placeholder="密码（8-20位，区分大小写）" />
                         </div>
-                        <div class="Pwdqiangdu fl" style="display: none;" id="qiangdu">
-                            <span class="fl" id="leval0">弱</span>
-                            <span class="fl" id="leval1">中</span>
-                            <span class="fl" id="leval2">强</span>
-                        </div>
+                        <div id="jiance">
+                            <span id="ruo">弱</span>
+                            <span id="yiban" style="margin-left:5px">一般</span>
+                            <span id="qiang" style="margin-left:5px">强</span>
+                        </div><br />
                         <div class="queren">
                             <label for="passwordag"> 确认密码：</label>
                             <input type="password" name="passwordag" id="passwordag"  placeholder="确认密码" />
                         </div>
                         <div class="jieshou">
                             <input type="checkbox"  checked="checked" name="agrement" class="xieyi" />
-                            <span class="Xieyi">我已阅读并接受E宠<a href="#" target="_blank">《用户使用协议》</a></span>
+                            <span>我已阅读并接受E宠<a href="#" target="_blank">《用户使用协议》</a></span>
                         </div>
                         <input type="button" id="btn" value="立即注册" />
                     </div>
