--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" type="text/css" href="css/base.css" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <script src="lib/jquery-3.2.1.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        jQuery(function($) {
-            $("#pageHeader").load("html/header.html");
-            $("#pageFooter").load("html/footer.html");   
-        });
-    </script>
     <script src="js/common.js" type="text/javascript"></script>
     <script src="js/index.js" type="text/javascript"></script>
 </head>
@@ -89,6 +83,15 @@
                         <li><a href="#"><span>散装狗粮</span></a></li>
                         <li class="last"><a href="#"><span style="border-right: 0 none;">处方狗粮</span></a></li>
                     </ul>
+                </div>
+                <div class="zl_c clearfix">
+                    <div class="fl"><img src="./images/zhuli01.png" height="477" width="328" alt="" /></div>
+                    <ul class="fr">
+                        
+                    </ul>
+                </div>
+                <div class="zl_b">
+                    <div><img src="./images/zhuli02.png" height="67" width="1200" alt="" /></div>
                 </div>
             </div>
         </div>
