--- a/src/html/reg.html
+++ b/src/html/reg.html
@@ -28,7 +28,7 @@
             })
         });
     </script> 
-    <!-- <script src="../js/reg.js" type="text/javascript"></script> -->
+    <script src="../js/reg.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="reg">
