写入商品详情的放大镜，但是有小bug……没达到预期效果

--- a/src/html/goods.html
+++ b/src/html/goods.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="../css/goods.css" />
     <link rel="stylesheet" type="text/css" href="../lib/jquery.gdsZoom/jquery.gdsZoom.css" />
     <script src="../lib/jquery-3.2.1.js" type="text/javascript"></script>
-    <script src="../lib/jquery.gdsZoom/jquery.gdsZoom.js" type="text/javascript"></script>
+    <script src="../lib/jquery.gdsZoom/jquery.gdsZoom.js" type="text/javascript"></script><script src="../js/goods.js"></script>
     <script src="../js/common.js" type="text/javascript"></script>
-    <script src="../js/goods.js"></script>
+    
 </head>
 <body>
     <div id="datalist">
@@ -64,12 +64,23 @@
             <div class="container clearfix">
                 <!-- 左侧商品图片 -->
                 <div class="gmd_l fl">
-                    
+                    <div class="goods">
+                        <img src="../images/b1.jpg" data-big="../images/b1.jpg">
+                    </div>
+                    <div class="smallList">
+                        <img src="../images/b1.jpg" data-big="../images/b1.jpg">
+                        <img src="../images/b2.jpg" alt="">
+                        <img src="../images/b3.jpg" alt="">
+                        <img src="../images/b4.jpg" alt="">
+                    </div>
                 </div>
                 <!-- 右侧内容 -->
                 <div class="gmd_r fr">
                     <img src="../images/xqneirong.png" height="640" width="710" alt="" />
                 </div>
+            </div>
+            <div class="bigimg">
+                <div class="container"><img src="../images/biggdms.png" alt="" /><img src="../images/biggdms01.png" alt="" /></div>
             </div>
         </div>
         <footer id="goodsFooter"></footer>
