--- a/src/html/login.html
+++ b/src/html/login.html
@@ -9,28 +9,7 @@
     <script src="../js/common.js" type="text/javascript"></script>
     <script src="../lib/jquery-3.2.1.js" type="text/javascript"></script>
     <link rel="stylesheet" href="../lib/bootstrap-3.3.7-dist/css/bootstrap.css">
-    <script>
-        jQuery(function($){
-            $('.logbtn').on('click',function(){
-                $.ajax({
-                    url:'../api/login.php',
-                    data:{
-                        username:$('#username').val(),
-                        password:$('#password').val()
-                    },
-                    success:function(data){
-                        console.log(data);
-                        if(data === 'success'){
-                            location.href = '../index.html';
-                        }else if(data === 'fail'){
-                            $('#username').parent().addClass('has-error');
-                        }
-                    }
-                })                
-            })
-        })
-    </script>
- 
+    <script src="../js/login.js"></script>
 </head>
 <body>
     <div id="login">
@@ -52,16 +31,25 @@
                         </div>
                         <div class="logdiv_c">
                             <span></span>
-                            <input type="text" name="username" class="loguser" id="username" value="" placeholder="手机号/邮箱/用户名" autocomplete="on">
-                            <br />
+                            <input type="text" name="username" class="loguser" id="username" value="" placeholder="手机号/邮箱/用户名" autocomplete="on"><br />
                             <span style="background-position: -115px -44px; top: 100px;"></span>
                             <input class="logpass" type="password" autocomplete="new-password" name="password" id="password" value="" placeholder="密码">
                         </div>
                         <div class="logdiv_b clearfix">
-                            <p class="fl"><input type="checkbox"  class="zido" checked/><span >自动登录</span></p><a href="#" class="fr">忘记密码?</a><br />
+                            <p class="fl">
+                                <input type="checkbox"  class="zido" checked/><span >自动登录</span>
+                            </p>
+                            <a href="#" class="fr">忘记密码?</a><br />
                             <button class="logbtn">登录</button>
-                            <p class="clearfix" style="margin-top:20px;"><span class="fl">合作网站登录</span><a href="reg.html" class="fr">注册帐号</a></p>
-                            <p style="margin-top:10px;"><a href="#"><img src="../images/wx.png"/></a><a href="#"><img src="../images/qq.png"/></a><a href="#"><img src="../images/zfb.png"/></a></p>
+                            <p class="clearfix" style="margin-top:20px;">
+                                <span class="fl">合作网站登录</span>
+                                <a href="reg.html" class="fr">注册帐号</a>
+                            </p>
+                            <p style="margin-top:10px;">
+                                <a href="#"><img src="../images/wx.png"/></a>
+                                <a href="#"><img src="../images/qq.png"/></a>
+                                <a href="#"><img src="../images/zfb.png"/></a>
+                            </p>
                         </div>
                     </div>
                 </form>
