--- a/src/html/reg.html
+++ b/src/html/reg.html
@@ -27,7 +27,7 @@
                     <div class="f_content">
                         <div class="phonenum">
                             <label for="phone">手机号：</label>
-                            <input type="text" name="phone" id="phone"  placeholder="请输入手机号码"  />
+                            <input type="tel" name="phone" id="phone"  placeholder="请输入手机号码"  />
                         </div>
                         <div class="yzm clearfix">
                             <label for="yzm">验证码：</label>
